2006-10-07  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (show_feed_contents): The manipulator save method
	returns the Podcast and the parsed data from the feed.

	* models.py (QueueItem): Add author_name and author_email fields.

	* forms.py (ShowFeedContentsForm.save): Use feedparser to pull
	data from the feed and store it in the db.  Return the Podcast
	instance and the parsed data.

2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Use wipeIn/wipeOut instead of just setting
	the inner html.

	* views.py (show_feed_contents): Log any errors from the form
	validation and return error text containing those error messages.

	* templates/user.html: Rename callback to make the name unique.

	* templates/two_columns.html: Add a status message div.

	* forms.py (ShowFeedContentsForm): New class to manage input
	fields in the show_feed_contents form.

	* views.py (user): Add some form handling for the
	show_feed_contents form.
	(newfunc): Simplistic decorator to trap exceptions and convert
	them to error messages.
	(show_feed_contents): Start a view to show the items in a feed
	submitted by the user.

	* urls.py (urlpatterns): Add show_feed_contents before the generic
	user home page view.  Make the regex for username more strict.

	* templates/user.html: Add a form and some javascript to show the
	contents of a feed if the user enters a URL.

2006-09-30  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Add classes to the parts of the queue listing.

	* templates/index.html: Switch to 2 columns.

	* templates/three_columns.html: Move global template into this app.

	* urls.py (feeds): Add rss feed info and update class for atom feeds.

	* templates/user.html: Add links for atom and rss feeds.

	* feeds.py (UserFeed): Add title and description templates.
	(UserFeed.title): Tweak formatting of feed title.
	(AtomFeed): New class to produce an ATOM feed, since we will
	support multiple formats.