@@ -12,13 +12,11 @@ _module_id_ = '$Id$'
 # Import system modules
 #
 from django import forms
-import feedparser
-import logging
 
 #
 # Import Local modules
 #
-from oneoffcast.models import Podcast
+from oneoffcast.models import find_or_create_podcast
 
 #
 # Module
@@ -39,30 +37,4 @@ class ShowFeedContentsForm(forms.Manipulator):
 
     def save(self, new_data):
         url = new_data['url']
-        
-        #
-        # Do we already know about the feed?
-        #
-        logging.debug('checking for existing podcast')
-        existing_casts = Podcast.objects.filter(feed_url=url)
-        if existing_casts.count() > 0:
-            podcast = existing_casts[0]
-            logging.debug('found existing podcast')
-
-            data = feedparser.parse(url)
-            
-        else:
-            logging.debug('parsing %s' % url)
-            data = feedparser.parse(url)
-
-            name = data.feed.title
-            description = data.feed.description
-            home_url = data.feed.link
-            
-            podcast = Podcast(name=name,
-                              description=description,
-                              home_url=home_url,
-                              feed_url=url,
-                              )
-            podcast.save()
-        return podcast, data
+        return find_or_create_podcast(url)        
